--- a/front-end/src/components/Form/Form.scss
+++ b/front-end/src/components/Form/Form.scss
@@ -1,6 +1,7 @@
 .form-container {
   width: 50%;
   margin: 2.5rem auto;
+  margin-bottom: 3.5rem;
   box-shadow: 0px 2px 5px grey;
   display: flex;
   flex-direction: column;
