--- a/front-end/src/components/Carousel/Carousel.scss
+++ b/front-end/src/components/Carousel/Carousel.scss
@@ -4,10 +4,8 @@
 }
 
 .slick-prev, .slick-next {
-    font-size: 24px;
-    line-height: 1;
-    color: pink;
-    background-color: pink;
+    background-color: purple;
+    border: solid 1px pink;
   }
 
   .slick-prev {
