--- a/front-end/src/components/Form/Form.scss
+++ b/front-end/src/components/Form/Form.scss
@@ -1,5 +1,5 @@
 .form-container {
-  width: 50%;
+  width: 65%;
   margin: 2.5rem auto;
   margin-bottom: 3.5rem;
   box-shadow: 0px 2px 5px grey;
@@ -15,12 +15,14 @@
   &__form {
     display: flex;
     width: 80%;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 
   &__left,
   &__right {
     flex: 1;
-    margin-left: 1.5rem;
+    margin-left: 0 1.5rem;
   }
 
   label {
@@ -29,14 +31,15 @@
   }
 
   input {
-    width: 100%;
+    width: calc(100% - 1rem);
     padding: 0.5rem;
     margin-bottom: 0.75rem;
     box-sizing: border-box;
   }
 
   button {
-    width: 100%;
+    width: 50%;
+    margin: 0.75rem auto;
     padding: 1rem;
     background-color: pink;
     border: none;
