--- a/front-end/src/components/Form/Form.scss
+++ b/front-end/src/components/Form/Form.scss
@@ -13,21 +13,16 @@
   }
 
   &__form {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
     width: 80%;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-
-  &__left,
-  &__right {
-    flex: 1;
-    margin-left: 0 1.5rem;
+    justify-content: center;
   }
 
   label {
     display: block;
-    margin-bottom: 0.25rem;
+    margin: 0.3rem;
   }
 
   input {
@@ -38,8 +33,9 @@
   }
 
   button {
-    width: 50%;
-    margin: 0.75rem auto;
+    width: 200%;
+    margin: auto;
+    margin-bottom: 1.125rem;
     padding: 1rem;
     background-color: pink;
     border: none;
